fixed spacing for header

--- a/src/assets/styles/layout/header.scss
+++ b/src/assets/styles/layout/header.scss
@@ -41,7 +41,6 @@
   }
 
   .content {
-    @extend .content;
     margin: 1.2em auto;
     .intro {
       display: block;
